# clutter-vlc

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  clutter-vlc.pc.in  configure.ac
clutter-vlc/: Makefile.am  clutter-vlc-main.c  clutter-vlc-main.h  clutter-vlc-version.h.in  clutter-vlc-video-texture.c  clutter-vlc-video-texture.h  clutter-vlc.h
clutter-vlc/.deps/: clutter-vlc-main.Plo  clutter-vlc-video-texture.Plo
examples/: Makefile.am  video-player.c
examples/.deps/: video_player-video-player.Po
